apps/shared/workadventure/Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workadventure
  labels:
    name: workadventure
