apps/shared/workadventure/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workadventure-ingress
  namespace: workadventure
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: "workadventure-forward-auth@kubernetescrd"
spec:
  rules:
    - host: workadventure.${DOMAIN_BASE}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: workadventure
                port:
                  number: 80
